...
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_with_label_error" />

        <com.soprasteria.movalysmdk.widget.basic.MDKRichEmail
            android:id="@+id/mdkRichEmail_withLabelAndError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/email_background"
            android:padding="2dp"
...
